@@ -123,4 +123,6 @@ YARN-Client模式通常只会在测试环境中。
 
 YARN-Cluster模式下JVM栈内存溢出问题的调优方案如下。
 
-在Spark-Submit脚本中设置PermGen。
+ 1. 在Spark-Submit脚本中设置PermGen。
+`-conf Spark.Driver.extraJavaOptions="-XX:PermSize=128M -XX:MaxPermSize=256M"`
+ 2. 如果使用Spark SQL，SQL中使用大量的or语句，也可能会报出JVM stack overflow，JVM栈内存溢出，此时可以 吧复杂的SQL简化为多个简单的SQL进行处理。
